--- a/Resources/css/index.css
+++ b/Resources/css/index.css
@@ -96,47 +96,17 @@ a {
     padding: 0;
     min-height: 100vh;
     width: 100%;
-    background-image: url('../images/portfolio-photos/background/1.JPEG');
+    background-image: url('../images/portfolio-photos/background/1-mobile.JPEG');
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-attachment: fixed; /* This keeps the background fixed while scrolling */
     overflow-x: hidden; /* Prevents horizontal scrolling */
     }
 
     .PC {
         display: none;
-    }  
-    @keyframes change {
-        0% {
-            background-image: url('../images/portfolio-photos/background/1-mobile.jpg');
-            background-position: 50% 30%;
-        }
-        16.67% {
-            background-image: url('../images/portfolio-photos/background/2-mobile.jpg');
-            background-position: 50% 20%;
-        }
-        33.34% {
-            background-image: url('../images/portfolio-photos/background/3-mobile.jpg');
-            background-position: 50% 30%;
-        }
-        50% {
-            background-image: url('../images/portfolio-photos/background/4-mobile.jpg');
-            background-position: 50% 20%;
-        }
-        66.67% {
-            background-image: url('../images/portfolio-photos/background/5-mobile.jpg');
-            background-position: 50% 20%;
-        }
-        83.34% {
-            background-image: url('../images/portfolio-photos/background/6-mobile.jpg');
-            background-position: 50% 20%;
-        }
-        100% {
-            background-image: url('../images/portfolio-photos/background/1-mobile.jpg');
-            background-position: 50% 30%;
-        }
-    }
+    }   
 }
 
 /* Additional fix for mobile viewport height */
@@ -148,42 +118,42 @@ html {
     .Mobile {
         display: none;
     }
-    @keyframes change {
-        0% {
-            background-image: url('../images/portfolio-photos/background/1.JPEG');
-            background-position: 50% 30%;
-        }
-        16.67% {
-            background-image: url('../images/portfolio-photos/background/2.JPEG');
-            background-position: 50% 20%;
-        }
-        33.34% {
-            background-image: url('../images/portfolio-photos/background/3.JPEG');
-            background-position: 50% 30%;
-        }
-        50% {
-            background-image: url('../images/portfolio-photos/background/4.JPEG');
-            background-position: 50% 20%;
-        }
-        66.67% {
-            background-image: url('../images/portfolio-photos/background/5.JPEG');
-            background-position: 50% 20%;
-        }
-        83.34% {
-            background-image: url('../images/portfolio-photos/background/6.JPEG');
-            background-position: 50% 20%;
-        }
-        100% {
-            background-image: url('../images/portfolio-photos/background/1.JPEG');
-            background-position: 50% 30%;
-        }
-    }  
+   
 }
 
 
 
 
-
+@keyframes change {
+    0% {
+        background-image: url('../images/portfolio-photos/background/1.JPEG');
+        background-position: 50% 30%;
+    }
+    16.67% {
+        background-image: url('../images/portfolio-photos/background/2.JPEG');
+        background-position: 50% 20%;
+    }
+    33.34% {
+        background-image: url('../images/portfolio-photos/background/3.JPEG');
+        background-position: 50% 30%;
+    }
+    50% {
+        background-image: url('../images/portfolio-photos/background/4.JPEG');
+        background-position: 50% 20%;
+    }
+    66.67% {
+        background-image: url('../images/portfolio-photos/background/5.JPEG');
+        background-position: 50% 20%;
+    }
+    83.34% {
+        background-image: url('../images/portfolio-photos/background/6.JPEG');
+        background-position: 50% 20%;
+    }
+    100% {
+        background-image: url('../images/portfolio-photos/background/1.JPEG');
+        background-position: 50% 30%;
+    }
+}
 
 /* CSS */
 /* Add this to your CSS */
