--- a/Resources/css/index.css
+++ b/Resources/css/index.css
@@ -99,14 +99,52 @@ a {
     background-image: url('../images/portfolio-photos/background/1-mobile.JPEG');
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     background-attachment: fixed; /* This keeps the background fixed while scrolling */
     overflow-x: hidden; /* Prevents horizontal scrolling */
     }
 
     .PC {
         display: none;
-    }   
+    } 
+    @keyframes change {
+        0% {
+            background-image: url('../images/portfolio-photos/background/1.JPEG');
+            background-position: 50% 30%;
+            background-size: 768px auto;
+            
+        }
+        16.67% {
+            background-image: url('../images/portfolio-photos/background/2.JPEG');
+            background-position: 50% 20%;
+            background-size: 768px auto;
+        }
+        33.34% {
+            background-image: url('../images/portfolio-photos/background/3.JPEG');
+            background-position: 50% 30%;
+            background-size: 768px auto;
+        }
+        50% {
+            background-image: url('../images/portfolio-photos/background/4.JPEG');
+            background-position: 50% 20%;
+            background-size: 768px auto;
+        }
+        66.67% {
+            background-image: url('../images/portfolio-photos/background/5.JPEG');
+            background-position: 50% 20%;
+            background-size: 768px auto;
+        }
+        83.34% {
+            background-image: url('../images/portfolio-photos/background/6.JPEG');
+            background-position: 50% 20%;
+            background-size: 768px auto;
+        }
+        100% {
+            background-image: url('../images/portfolio-photos/background/1.JPEG');
+            background-position: 50% 30%;
+            background-size: 768px auto;
+        }
+    }  
 }
 
 /* Additional fix for mobile viewport height */
@@ -118,42 +156,43 @@ html {
     .Mobile {
         display: none;
     }
-   
-}
-
-
-
-
-@keyframes change {
-    0% {
-        background-image: url('../images/portfolio-photos/background/1.JPEG');
-        background-position: 50% 30%;
-    }
-    16.67% {
-        background-image: url('../images/portfolio-photos/background/2.JPEG');
-        background-position: 50% 20%;
-    }
-    33.34% {
-        background-image: url('../images/portfolio-photos/background/3.JPEG');
-        background-position: 50% 30%;
-    }
-    50% {
-        background-image: url('../images/portfolio-photos/background/4.JPEG');
-        background-position: 50% 20%;
-    }
-    66.67% {
-        background-image: url('../images/portfolio-photos/background/5.JPEG');
-        background-position: 50% 20%;
-    }
-    83.34% {
-        background-image: url('../images/portfolio-photos/background/6.JPEG');
-        background-position: 50% 20%;
-    }
-    100% {
-        background-image: url('../images/portfolio-photos/background/1.JPEG');
-        background-position: 50% 30%;
+    @keyframes change {
+        0% {
+            background-image: url('../images/portfolio-photos/background/1.JPEG');
+            background-position: 50% 30%;
+            
+        }
+        16.67% {
+            background-image: url('../images/portfolio-photos/background/2.JPEG');
+            background-position: 50% 20%;
+        }
+        33.34% {
+            background-image: url('../images/portfolio-photos/background/3.JPEG');
+            background-position: 50% 30%;
+        }
+        50% {
+            background-image: url('../images/portfolio-photos/background/4.JPEG');
+            background-position: 50% 20%;
+        }
+        66.67% {
+            background-image: url('../images/portfolio-photos/background/5.JPEG');
+            background-position: 50% 20%;
+        }
+        83.34% {
+            background-image: url('../images/portfolio-photos/background/6.JPEG');
+            background-position: 50% 20%;
+        }
+        100% {
+            background-image: url('../images/portfolio-photos/background/1.JPEG');
+            background-position: 50% 30%;
+        }
     }
 }
+
+
+
+
+
 
 /* CSS */
 /* Add this to your CSS */
