--- a/Resources/css/index.css
+++ b/Resources/css/index.css
@@ -36,7 +36,7 @@ body {
     background-position: 50% 20%;
     background-repeat: no-repeat;
     background-size: cover;
-    
+    background-color: #000000;
     overflow-x: hidden; /* Prevents horizontal scrolling */
     animation: change 40s infinite ease-in-out;
 }
