--- a/resource/css/portfolio.css
+++ b/resource/css/portfolio.css
@@ -336,6 +336,10 @@ body {
       
         
     }
+    .gallery {
+        gap: 10px;
+        width: 95%;
+    }
     .gallery-item img {
         height: 250px;
     }
@@ -369,15 +373,15 @@ body {
 /* Magnifier circle */
 .magnifier {
     position: absolute;
-    width: 200px;  /* Adjust size as needed */
-    height: 200px;
+    width: 250px;  /* Adjust size as needed */
+    height: 250px;
     border-radius: 50%;
     border: 2px solid white;
     overflow: hidden;
     pointer-events: none;  /* Allows clicking through the magnifier */
     display: none;
     background-repeat: no-repeat;
-    background-size: 700%;
+    background-size: 500%;
 }
 
 /* Zoomed-in image effect */
@@ -452,7 +456,7 @@ body {
     align-items: center;
     flex-direction: column;
     width: 100%;
-    height: 80%;
+    height: 100%;
     margin: 0;
 }
 @keyframes floatIn {
@@ -487,4 +491,119 @@ body {
     opacity: 0;
     animation: floatIn 1s cubic-bezier(0.23, 1, 0.32, 1) 1s forwards;
     /* Format: name duration timing-function delay fill-mode */
+}
+
+.checkbox {
+    display: flex;
+    
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    font-family: "Ledger";
+    color: #fff;
+}
+
+
+
+#modal-img {
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+}
+input[type=checkbox].bw-toggle-btn {
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    width: 6em;
+    height: 3em;
+    border-radius: 3em;
+    background-color: #ffffff;
+    outline: 0;
+    cursor: pointer;
+    transition: background-color 0.5s ease-in-out;
+    transition: margin-bottom 0.2s ease-in-out;
+    transition: scale 0.2s ease-in-out;
+    position: relative;
+}
+
+input[type=checkbox].bw-toggle-btn:checked {
+    background-color: rgb(0, 0, 0);
+}
+
+input[type=checkbox].bw-toggle-btn::after {
+    content: '';
+    width: 3em;
+    height: 3em;
+    background-color: rgb(0, 0, 0);
+    border-radius: 3em;
+    position: absolute;
+    transform: scale(0.7);
+    left: 0;
+    transition: left 0.5s ease-in-out;
+    box-shadow: 0 0.1em rgba(0, 0, 0, 0.5);
+}
+
+input[type=checkbox].bw-toggle-btn:checked::after {
+    left: 3em;
+    background-color: #fff;
+    transition: all 0.5s;
+}
+
+input[type=checkbox].bw-toggle-btn:hover {
+    margin-bottom: 4px;
+    scale: 1.1;
+}
+.load-more-btn {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+}
+
+.load-more-btn:hover {
+    background-color: #444;
+}
+/* Ensure the gallery is a flex container */
+.gallery-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centers the content */
+}
+
+/* Gallery styling */
+.gallery {
+    
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+}
+
+/* Button styling */
+.load-more-button {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #cbcbcc;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    transition: background-color 0.3s;
+    font-family: "Cinzel";
+}
+
+.load-more-button:hover {
+    background-color: #000000;
+}
+
+.load-more-button:disabled {
+    background-color: transparent;
+    cursor: default;
+    color: transparent;
+    
 }
