--- a/resource/css/portfolio.css
+++ b/resource/css/portfolio.css
@@ -44,6 +44,7 @@ nav {
     font-size: 12px;
     padding-top: 10px;
     padding-right: 5px;
+    font-family: 'Ledger';
 }
 .Title h1 {
         font-size: 45px;
@@ -59,7 +60,7 @@ nav {
         font-size: 20px;
         color: #000000;
         text-align: center;
-        margin-top: -3px;
+        margin-top: -8px;
         font-family: 'Cinzel';
         font-weight: 500;
         margin-bottom: 30px;
