--- a/resource/css/about.css
+++ b/resource/css/about.css
@@ -14,6 +14,14 @@
 
 
 }
+@font-face {
+    font-family: 'Brawler';
+    src: url('../font/Brawler/Brawler-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+
+
+}
 
 nav {
     display: flex;
@@ -186,7 +194,7 @@ footer section.rights {
     white-space: nowrap;
     font-size: 10px;
     color: #cac9c9;
-    
+    font-family: "Brawler";
     flex-grow: 1;
 }
 footer section.rights p {
@@ -221,13 +229,13 @@ footer section.social-links li img {
 footer section.social-links li img.facebook {
     width: 30px;
     height: 30px;
-    content: url('../images/Facebook\ Logo\ Unhover.png');
+    content: url('../images/Mail\ unhover.png');
     transition: all 0.3s ease;
 }
 
 footer section.social-links li img.facebook:hover {
     transform: scale(1.1);
-    content: url('../images/Facebook\ Logo\ Hover.png');
+    content: url('../images/Mail\ hover.png');
 }
 footer section.social-links li img.instagram {
     width: 30px;
