--- a/resource/css/contact.css
+++ b/resource/css/contact.css
@@ -418,18 +418,18 @@ background-position: center;
         z-index: 1;
         background-color: #ffffffb4;
         border: #cac9c9 2px solid;
+
         height: 100%;
        
     }
     .photo-slide {
         position: absolute;
         width: 100%;
-        animation: none;
+        animation: imagechange 20s ease-in-out infinite;
         height: 100%;
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
-        background-image: url('/resource/images/portfolio-photos/background/3-mobile.jpg');
         
         
     }  
