--- a/resource/css/portfolio.css
+++ b/resource/css/portfolio.css
@@ -348,6 +348,8 @@ body {
         justify-content: center;
         align-items: center;
         padding: 5px!important;
+        width: 90%!important;
+        height: 90%!important;
     }
     .modal-content #modal-img {
         display: flex;
@@ -366,6 +368,12 @@ body {
         flex-direction: column;
         width: 100%;
         top: 40px;
+    }
+    #modal-title {
+        margin-bottom: 20px!important;
+    }
+    #modal-description {
+        width: 90%!important
     }
 }
 
